 - win32: fixed ssl "Error 2" connection bug.
 - Made all toplevel dialog windows transients of the main window.
 - Show filesize/pos in DCC window as KB and MB (Aaron Chernosky).
 - Added /set tab_dnd 0/1 option.
 - Fixed userlist insertion and deletion performance problem [704233].
 - Each toplevel window now has a "role".
 - Smaller bugs fixed: [698449] [718851].
 - 


----------------------------------------------------------------------
 2.0.1
----------------------------------------------------------------------

 - Updated translations (am, ca, lt).
 - Save serverlist before connecting (Joe Drew).
 - OpenBSD compile fixes.
 - (Encoding) Fallback outgoing text to "?" for unconvertable chars.
   [674798].
 - Hide tab scrolling buttons when they're not needed.
 - Fixed --disable-xlib compiles.
 - Fixed use of %h in dialog-tab buttons [688937].
 - Fixed printing/logging timestamps that contain invalid utf8
   [688548].
 - Added "Resizable userlist" option (default ON).
 - Strip colors on topic change.
 - Fixed (snotice) and (notice) tabs being swapped [687437].
 - Made more strings translatable.
 - Allow loading empty text events [691191].
 - Fixed xtext race condition [678874].
 - Added ability to show/hide the channel-mode buttons (default OFF).
 - Use the network name in server-tab rather than full hostname.
 - Added keybindings for moving tab-families, default is ctrl-shift
   PageUp and PageDown (Vincent Ho).
 - Added 'Beep on highlighted messages' option (Jirka Kosina).
 - Use DND to detach tabs.
 - Interpret %C, %B etc in quit reasons.
 - Added more items to the right-click tab menu.
 - Some misc UI cleanups.


----------------------------------------------------------------------
 2.0.0
----------------------------------------------------------------------

 - Updated translations (de, es, lt, nl, sk, sl).
 - Fixed half cut off dates in notify window.
 - Fixed tabs loosing red/blue color when being renamed.